trying to fix checkbox alignments

--- a/omod/src/main/compass/sass/mixins.scss
+++ b/omod/src/main/compass/sass/mixins.scss
@@ -70,7 +70,7 @@
   background-color: #fafafa;
   border: 1px solid #cacece;
   box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
-  padding: 9px;
+  padding: 8px;
   border-radius: 3px;
   display: inline-block;
   position: relative;
